# mandelbrot

./: .gitignore  README.md  mandelbrot.c  mandelbrot.dart  mandelbrot.go  mandelbrot.hi  mandelbrot.hs  mandelbrot.java  mandelbrot.jl  mandelbrot.js  mandelbrot.kt  mandelbrot.pas  mandelbrot.py  mandelbrot.rb  mandelbrot.🔥  mandelbrot_cust_complex.go  mandelbrot_cust_complex.py  mandelbrot_no_numpy.py  mandelbrot_numba.py  mandelbrot_numba_prange.py  mandelbrot_pure.py
_optimized/: README.md  a.out  mandelbrot.c  mandelbrot.dart  mandelbrot_parallel.dart  plot.py
_optimized/_misc/: mandelbrot.numbers  mandelbrot.skp  mandelbrot~.skp
_optimized/c/: CMakeLists.txt  main.c
_optimized/csharp/: ConsoleApp.csproj  Program.cs  README.md  output.txt
csharp/: Program.cs  README.md
csharp_32_vs_64_bit/: ConsoleApp.csproj  Program.cs  README.md
csharp_cust_complex/: ConsoleApp.csproj  Program.cs  README.md
csharp_no_complex/: README.md
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust_cust_complex/: README.md
rust_cust_complex/src/: main.rs
